# ocpi-tariffs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  price_report.json  publish.md  whack.toml
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  error.rs  lib.rs  main.rs
ocpi-tariffs/: Cargo.toml  README.md  deny.toml
ocpi-tariffs/resources/025kwh_min_price/: cdr1.json  cdr2_less_than_2kWh.json
ocpi-tariffs/resources/025kwh_start/: cdr1.json
ocpi-tariffs/resources/simple_3hour_5parking/: cdr1.json
ocpi-tariffs/resources/step_size/: cdr1.json
ocpi-tariffs/resources/step_size_energy/: cdr1.json  tariff.json
ocpi-tariffs/src/: explain.rs  lib.rs  lint.rs  normalize.rs  ocpi.rs  pricer.rs  restriction.rs  session.rs  tariff.rs  types.rs
ocpi-tariffs/src/ocpi/: cdr.rs  tariff.rs  v211.rs
ocpi-tariffs/src/ocpi/v211/: cdr.rs  tariff.rs
ocpi-tariffs/src/ocpi/v221/: cdr.rs  tariff.rs
ocpi-tariffs/src/types/: electricity.rs  money.rs  number.rs  time.rs
ocpi-tariffs/test_data/025kwh_min_price/: cdr1.json  cdr2_less_than_2kWh.json
ocpi-tariffs/test_data/025kwh_start/: cdr1.json
ocpi-tariffs/test_data/grace_period_parking_time/: cdr.json  tariff.json
ocpi-tariffs/test_data/multiple_flat_fees/: cdr.json  tariff.json
ocpi-tariffs/test_data/simple_025kwh/: cdr1.json
ocpi-tariffs/test_data/simple_3hour_5parking/: cdr1.json
ocpi-tariffs/test_data/step_size/: cdr1.json
ocpi-tariffs/test_data/step_size_energy/: cdr1.json
ocpi-tariffs/tests/: integration.rs
ocpi-tariffs/tests/common/: mod.rs
resources/025kwh_min_price/: cdr2_less_than_2kWh.json
resources/025kwh_start/: cdr1.json
resources/simple_025kwh/: cdr1.json
resources/step_size/: cdr1.json
scripts/: cargo_fmt_with_imports.sh  ci.sh  clean_build.sh
src/: lib.rs  ocpi.rs  pricer.rs  restriction.rs  session.rs  tariff.rs  types.rs
src/ocpi/: cdr.rs  location.rs  tariff.rs
tests/: integration.rs
