[workspace.package]
version = "0.6.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tandemdrive/ocpi-tariffs"
description = "OCPI tariff calculations"
license = "MIT OR Apache-2.0"

[workspace]
members = ["cli", "ocpi-tariffs"]
resolver = "2"

[workspace.dependencies]
chrono-tz = { version = "0.9.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0.117", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
