[package]
name = "ocpi-tariffs-cli"
readme = "README.md"
description = "CLI application for OCPI tariff calculation"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "ocpi-tariffs"
path = "src/main.rs"

[dependencies]
chrono-tz.workspace = true
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "serde"] }
clap = { version = "4.5.4", features = ["derive"] }
console = { version = "0.15.8" }
ocpi-tariffs = { version = "0.5.2", path = "../ocpi-tariffs", features = ["ocpi-v211"] }
serde_json.workspace = true
serde.workspace = true
tabled = { version = "0.15.0" }
