[package]
name = "ocpi-tariffs"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
chrono-tz.workspace = true
chrono = { version = "0.4.23", default-features = false }
rust_decimal_macros = "1.27.0"
rust_decimal = { version = "1.26.1", features = ["serde-with-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
