[package]
name = "ocpi-tariffs"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
ocpi-v211 = []

[dependencies]
chrono-tz.workspace = true
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
rust_decimal_macros = "1.29.1"
rust_decimal = { version = "1.29.1", features = ["serde-with-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
