[package]
name = "ocpi-tariffs"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
ocpi-v211 = []

[dependencies]
chrono-tz.workspace = true
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
rust_decimal_macros = "1.32.0"
rust_decimal = { version = "1.32.0", features = ["serde-with-arbitrary-precision"] }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
test-each = { version = "0.2.1" }
